[gd_scene load_steps=4 format=3 uid="uid://dinds5md65l0l"]

[ext_resource type="Texture2D" uid="uid://crb25rhwwvkcr" path="res://assets/ui/window_tab.png" id="1_1totk"]
[ext_resource type="Script" uid="uid://dj8j61ou8tob6" path="res://ui/level_preview/level_preview.gd" id="1_8p2iv"]
[ext_resource type="Theme" uid="uid://dgmt8ko4oq3ew" path="res://ui/general_ui_theme.tres" id="2_8p2iv"]

[node name="LevelPreview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8p2iv")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="Window" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -277.0
offset_right = 370.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1totk")
expand_mode = 5

[node name="ColorRect" type="ColorRect" parent="Window"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -106.0
offset_top = 39.0
offset_right = 58.0
offset_bottom = 68.0
grow_horizontal = 2
color = Color(0.647059, 0.541176, 0.478431, 1)

[node name="Title" type="Label" parent="Window"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.0
offset_top = 36.0
offset_right = 33.0
offset_bottom = 68.0
grow_horizontal = 2
size_flags_vertical = 0
theme = ExtResource("2_8p2iv")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 40
text = "Battle Preview"
horizontal_alignment = 3
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = 81.0
offset_right = -57.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="LevelName" type="Label" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8p2iv")
theme_override_font_sizes/font_size = 50
text = "You're about to enter: X-X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LevelLayout" type="TextureRect" parent="Window/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="MemberCount" type="Label" parent="Window/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8p2iv")
theme_override_font_sizes/font_size = 35
text = "Enemy Count: X
Ally Count: X"

[node name="HBoxContainer" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Start" type="Button" parent="Window/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_8p2iv")
theme_override_font_sizes/font_size = 30
text = "Start Battle"

[node name="Party" type="Button" parent="Window/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_8p2iv")
theme_override_font_sizes/font_size = 30
text = "Manage Party"

[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/HBoxContainer/Party" to="." method="_on_party_pressed"]
